--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
                     </section>
                 </div>
             </div>
+            <div id="page2">
+                <div class="l_pg">
+                    <h2>Director: </h2>
+                    <img src="IMG_3666.jpg" alt="" class="me">
+                </div>
+                <div class="r_pg">
+                    <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. -->If you think money can't buy happiness, Habibi come to Dubai...!</h3>
+                </div>
+            </div>
             <div class="foot">
                 <footer><p>© 2017 PDPICA. All rights reserved | Design & Devloped by <span>Zingur.</span></p></footer>
             </div>
