--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <img src="IMG_3666.jpg" alt="" class="me">
                 </div>
                 <div class="r_pg">
-                    <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. -->If you think money can't buy happiness, Habibi come to Dubai...!</h3>
+                    <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. -->Sab mohh maaya hai,  fir bhi mene PD PANDYA Collage banaya hai....!</h3>
                 </div>
             </div>
             <div class="foot">
