--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P.D.Pandya Institute Of Computer Applications</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://pdpandyabca.com/images/banner1.png" type="image/x-icon">
     <!-- icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -59,7 +60,7 @@
                         <h1>Address</h1>
                             <span class="phone">
                                 <i class="ri-map-pin-2-fill"><span>P.D.Pandya Collage Campus, Muktjeevan Smruti Mandir Road, Ghodasar , Ahmedabad-382445</span></i> <br> <br> <br>
-                                <i class="ri-phone-fill"><span>+91 ##########, +91 ##########</span></i>
+                                <i class="ri-phone-fill"><span>+91 7984258818, +91 ##########</span></i>
                             </span>
                     </section>
                 </div>
@@ -70,7 +71,7 @@
                     <img src="IMG_3666.jpg" alt="" class="me">
                 </div>
                 <div class="r_pg">
-                    <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. -->Sab mohh maaya hai,  fir bhi mene PD PANDYA Collage banaya hai....!</h3>
+                    <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. --> <br> Sab mohh maaya hai,  fir bhi mene <span style="color: #800080;">PD PANDYA </span>Collage banaya hai....!</h3>
                 </div>
             </div>
             <div class="foot">
