--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div id="page2">
                 <div class="l_pg">
                     <h2>Director: </h2>
-                    <img src="https://www.google.com/search?client=ms-android-vivo&sca_esv=566929587&q=cheems+dp&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjk3LKBqbmBAxWLft4KHdmJB14Q0pQJegQICxAB&biw=360&bih=676&dpr=2#imgrc=TYqWqIEH8R-qOM" <!--src="IMG_3666.jpg"--> alt="" class="me">
+                    <img src="https://www.google.com/search?client=ms-android-vivo&sca_esv=566929587&q=cheems+dp&tbm=isch&source=lnms&sa=X&ved=2ahUKEwjk3LKBqbmBAxWLft4KHdmJB14Q0pQJegQICxAB&biw=360&bih=676&dpr=2#imgrc=TYqWqIEH8R-qOM" alt="" class="me">
                 </div>
                 <div class="r_pg">
                     <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. --> <br> Sab mohh maaya hai,  fir bhi mene <span style="color: #800080;">PD PANDYA </span>Collage banaya hai....!</h3>
