--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div id="page2">
                 <div class="l_pg">
-                    <h2>Director: </h2>
+                    <h2>Director: </h2><!--src="IMG_3666.jpg"-->
                     <img src="https://i.imgflip.com/5hxs3a.png" alt="" class="me">
                 </div>
                 <div class="r_pg">
