--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <img src="https://i.imgflip.com/5hxs3a.png" alt="" class="me">
                 </div>
                 <div class="r_pg">
-                    <h3 class="dev">Don't Study too hard...! <br><!--  Just fall for rich girls and money come from their father's bank account. --> <br> Sab mohh maaya hai,  fir bhi mene <span style="color: #800080;">PD PANDYA </span>Collage banaya hai....!</h3>
+                    <h3 class="dev">Don't Study too hard...! <br>Just fall for rich girls and money come from their father's bank account.<br> Sab mohh maaya hai,  fir bhi mene <span style="color: #800080;">PD PANDYA </span>Collage banaya hai....!</h3>
                 </div>
             </div>
             <div class="foot">
